feat(be): add unit test and ci for task service (#92)
* feat(be): update unit test

* feat(devops): add detail test summary